--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ html {
     position: absolute;
     top: 0px;
     left: 0px;
+
 }
 
 header {
@@ -47,9 +48,10 @@ header {
 header .logo{
     padding: 5px 32px;
     color: white;
-    font-size: 32px;
+    font-size: 42px;
     font-weight: bold;
-    z-index: 100;
+    z-index: 50;
+    text-shadow: 2px 2px 15px black;
 }
 
 nav ul{
@@ -57,8 +59,8 @@ nav ul{
 }
 
 nav .menu {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     display: none;
 }
 
@@ -122,30 +124,124 @@ nav ul li a{
     nav .menu {
     display: block;
     margin-top: 30px;
-    margin-right: 30px;
+    margin-right: 40px;
+    z-index: 50;
     }
 
     nav .menu:hover+ul{
-        top: 70px;
+        top: 0;
         right: 0;
     }
 
     nav ul {
+
     display: flex;
     flex-direction: column;
     position: absolute;
     top: -350px;
     background-color: rgba(255, 200, 69, 0.9);
-    padding: 10px 50px;
+    padding: 10px 20px;
     text-transform: uppercase;
     text-align: center;
     font-weight: bold;
+    z-index: 60;
     }
 
     nav ul:hover {
-        top:70px;
+        top:0;
         right: 0;
         left: 0;
     }
 
+    nav ul li:hover{
+        padding: 10px 60px;
+        background-color: rgba(241, 239, 239, 0.5);
+    }
+}
+
+/*CONTENEDOR 2 */
+
+.contenedor-2{
+    display: flex;
+    margin-top: 65px;
+    margin-bottom: 100px;
+}
+
+.contenedor-2 .c2-img {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.contenedor-2 .c2-img video {
+    width: 750px;
+    height: 440px;
+    object-fit: cover;
+    margin-left: 15px;
+}
+
+.contenedor-2 .c2-contenido {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 70px 150px 20px 0;
+
+}
+
+.c2-contenido h3 {
+    color: #3bcc75;
+    font-size: 26px;
+}
+
+.c2-contenido h2 {
+    text-transform: uppercase;
+    font-size: 32px;
+    text-align: center;
+}
+
+.c2-contenido span{
+    font-size: 50px;
+    color: #3bcc75;
+    font-weight: bold;
+    padding: 0;
+    margin-bottom: 25px;
+}
+
+.c2-contenido p {
+    width: 80%;
+    text-align: center;
+}
+
+/*CONTENEDOR 3*/
+
+.contenedor-3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-image: url(../img/mesa.jpg);
+    background-position: center center;
+    background-repeat: none;
+    background-size: cover;
+    object-fit: cover;
+    height: 70vh;
+    margin-bottom: 100px;
+}
+
+.c3-contenido h2{
+    color: #3bcc75;
+    text-align: center;
+    font-size: 28px;
+    text-shadow: 1px 1px 15px rgb(58, 56, 56);
+}
+
+.c3-contenido h3 {
+    color: #fff;
+    text-align: center;
+    text-shadow: 2px 2px 15px black;
+    text-transform: uppercase;
+    font-size: 38px;
 }
