--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,12 +207,13 @@ nav ul li a{
     color: #3bcc75;
     font-weight: bold;
     padding: 0;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
 }
 
 .c2-contenido p {
     width: 80%;
     text-align: center;
+    line-height: 30px;
 }
 
 /*CONTENEDOR 3*/
@@ -244,4 +245,139 @@ nav ul li a{
     text-shadow: 2px 2px 15px black;
     text-transform: uppercase;
     font-size: 38px;
+}
+
+/*CONTENEDOR 4 */
+
+.contenedor-4{
+    width: 100%;
+    display: flex;
+    margin-bottom: 100px;
+   overflow: hidden;
+
+}
+
+.c4-contenido {
+    width: 50%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 75px;
+}
+
+.c4-contenido h3{
+    color: #3bcc75;
+    font-size: 26px;
+} 
+.c4-contenido span{
+    font-size: 50px;
+    color: #3bcc75;
+    font-weight: bold;
+    padding: 0;
+    margin-bottom: 25px;
+}
+
+.c4-contenido p {
+    width: 75%;
+    text-align: center;
+    line-height: 30px;
+}
+
+.c4-contenido h2 {
+    text-transform: uppercase;
+    font-size: 32px;
+}
+
+
+.c4-grid {
+    width: 50%;
+}
+
+.c4-grid{
+    display: grid;
+    grid-template-columns: repeat(2,350px);
+    grid-template-rows: 234px;
+
+    object-fit: cover;
+    gap: 10px;
+}
+
+.c4-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/*CONTENEDOR 4BIS*/
+
+iframe{
+    width: 100%;
+    height: 250px;
+    margin: auto 100px ;
+    box-shadow: 8px 8px 8px rgb(189, 183, 183);
+}
+
+.c5-iframe {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 110px;
+}
+
+/*CONTENEDOR 5 */
+
+.contenedor-5 {
+    width: 100%;
+    display: flex;}
+
+.c5-imgs{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    
+}
+
+.c5-img {
+    width: 43%;
+    height: 550px;
+    padding: 10px;
+    object-fit: cover;
+}
+
+
+.c5-contenido {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 50px;
+}
+
+.c5-contenido h2{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 32px;
+}
+
+.c5-contenido h3{
+    color: #3bcc75;
+    font-size: 26px;
+    margin-top: 90px;
+} 
+
+.c5-contenido span{
+    font-size: 50px;
+    color: #3bcc75;
+    font-weight: bold;
+    padding: 0;
+    margin-bottom: 25px;
+    text-align: center;
+}
+
+.c5-contenido p {
+    width: 75%;
+    text-align: center;
+    line-height: 30px;
 }
