--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,6 +216,13 @@ nav ul li a{
     line-height: 30px;
 }
 
+.btn {
+        padding: 10px 32px;
+        background-color: #ffc845;
+        color: white;
+        margin-top: 40px;
+}
+
 /*CONTENEDOR 3*/
 
 .contenedor-3 {
@@ -263,7 +270,7 @@ nav ul li a{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 75px;
+    margin-top: 45px;
 }
 
 .c4-contenido h3{
@@ -315,7 +322,7 @@ iframe{
     width: 100%;
     height: 250px;
     margin: auto 100px ;
-    box-shadow: 8px 8px 8px rgb(189, 183, 183);
+    box-shadow: 8px 8px 18px rgb(189, 183, 183);
 }
 
 .c5-iframe {
@@ -329,7 +336,9 @@ iframe{
 
 .contenedor-5 {
     width: 100%;
-    display: flex;}
+    display: flex;
+    margin-bottom: 100px;
+}
 
 .c5-imgs{
     width: 50%;
@@ -364,7 +373,7 @@ iframe{
 .c5-contenido h3{
     color: #3bcc75;
     font-size: 26px;
-    margin-top: 90px;
+    margin-top: 30px;
 } 
 
 .c5-contenido span{
