--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -390,3 +390,81 @@ iframe{
     text-align: center;
     line-height: 30px;
 }
+
+/*CONTENEDOR 6*/
+
+.contenedor-6 {
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.c6-nosotros{
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #fff;
+    margin-top: 40px;
+}
+
+.c6-nosotros h2{
+    text-transform: uppercase;
+    font-weight: 100;
+}
+
+.c6-nosotros span{
+    font-size: 50px;
+    color: #3bcc75;
+    line-height: 25px;
+    margin-bottom: 40px;
+    font-weight: bold;
+
+}
+
+.c6-nosotros p{
+    text-align: center;
+}
+
+.c6-contacto h2{
+    color: white;
+    text-transform: uppercase;
+    font-weight: 100;
+}
+
+.c6-contacto {
+    width: 65%;
+    display: flex;
+    justify-content: space-between;
+    margin: 50px 0;
+}
+.redes h2 {
+    text-align: center;
+    font-weight: 100;
+}
+
+.img-redes {
+    margin-top: 12px;
+}
+
+.mail a{
+    margin-top: 5px;
+}
+
+
+.mail h2 {
+margin-bottom: 40px;
+text-align: center;
+font-weight: 100;
+}
+
+.img-redes img{
+    padding: 20px;
+}
+
+.btn1{        
+    padding: 10px 32px;
+    background-color: #a7a6a3;
+    color: white;
+    margin-top: 40px;}
