--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,8 @@ nav ul li a{
     font-size: 40px;
     color: #fff;
     font-weight: bold;
+    line-height: 40px;
+    margin: 10px 0;
 }
 
 .contenedor1-central h3{
@@ -114,18 +116,18 @@ nav ul li a{
 }
 
 .contenedor1-central a:hover{
-    color: #3bcc75;
-    background-color: antiquewhite;
+    color: antiquewhite;
+    background-color: #3bcc75;
     text-shadow: none;
 }
 
 
 @media (max-width: 875px){
     nav .menu {
-    display: block;
-    margin-top: 30px;
-    margin-right: 40px;
-    z-index: 50;
+        display: block;
+        margin-top: 30px;
+        margin-right: 40px;
+        z-index: 50;
     }
 
     nav .menu:hover+ul{
@@ -134,7 +136,6 @@ nav ul li a{
     }
 
     nav ul {
-
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -157,6 +158,11 @@ nav ul li a{
         padding: 10px 60px;
         background-color: rgba(241, 239, 239, 0.5);
     }
+
+    .contenedor1-central{
+        margin-top: 22vh;
+        line-height: 40px;
+    }
 }
 
 /*CONTENEDOR 2 */
@@ -175,10 +181,9 @@ nav ul li a{
 }
 
 .contenedor-2 .c2-img video {
-    width: 750px;
+    width: 82%;
     height: 440px;
     object-fit: cover;
-    margin-left: 15px;
 }
 
 .contenedor-2 .c2-contenido {
@@ -187,7 +192,7 @@ nav ul li a{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 70px 150px 20px 0;
+    padding: 70px 50px 20px 0;
 
 }
 
@@ -223,6 +228,39 @@ nav ul li a{
         margin-top: 40px;
 }
 
+.btn:hover{
+    background-color: #3bcc75;
+}
+
+@media (max-width: 1000px){
+    .contenedor-2{
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    
+.contenedor-2 .c2-img {
+    width: 100%;
+    margin-top: 50px;
+}
+
+.contenedor-2 .c2-img video{
+     width: 100%;
+}
+
+.contenedor-2 .c2-contenido {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px ;
+
+}
+}
+
 /*CONTENEDOR 3*/
 
 .contenedor-3 {
@@ -236,7 +274,7 @@ nav ul li a{
     background-size: cover;
     object-fit: cover;
     height: 70vh;
-    margin-bottom: 100px;
+    margin-bottom: 60px;
 }
 
 .c3-contenido h2{
@@ -265,12 +303,12 @@ nav ul li a{
 }
 
 .c4-contenido {
-    width: 50%;
+    width: 40%;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 45px;
+    margin: 45px 0 0 25px;
 }
 
 .c4-contenido h3{
@@ -297,40 +335,94 @@ nav ul li a{
 }
 
 
-.c4-grid {
-    width: 50%;
-}
-
 .c4-grid{
+    width: 60%;
     display: grid;
     grid-template-columns: repeat(2,350px);
     grid-template-rows: 234px;
-
     object-fit: cover;
     gap: 10px;
+    justify-content: center;
+
 }
 
 .c4-img{
     width: 100%;
-    height: 100%;
+    height: 240px;
     object-fit: cover;
+}
+
+.c4-item{
+    overflow: hidden;
+}
+
+.c4-img:hover{
+    transform: scale(1.15);
+    transition: .5s;
+}
+
+@media (max-width: 1150px){
+    .contenedor-4{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+    }
+
+    .c4-contenido{
+        width: 100%;
+        margin-bottom: 60px;
+        margin-left: 0;
+    }
+
+    .c4-grid{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2,350px);
+        grid-template-rows: 234px;
+        object-fit: cover;
+        gap: 10px;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width: 739px){
+    .c4-grid{
+        width: 80%;
+        display: grid;
+        grid-template-columns: 95%;
+        object-fit: cover;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 /*CONTENEDOR 4BIS*/
 
-iframe{
+
+.contenedor-4bis{
     width: 100%;
-    height: 250px;
-    margin: auto 100px ;
-    box-shadow: 8px 8px 18px rgb(189, 183, 183);
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100px;
 }
 
-.c5-iframe {
+
+iframe{
+    width: 80%;
+    height: 250px;
+    box-shadow: 8px 8px 18px rgb(189, 183, 183);  
     display:flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 110px;
 }
+
+@media (max-width: 739px){
+    iframe{
+        width: 100%;}
+}
+
 
 /*CONTENEDOR 5 */
 
@@ -338,21 +430,87 @@ iframe{
     width: 100%;
     display: flex;
     margin-bottom: 100px;
+    
 }
 
 .c5-imgs{
     width: 50%;
     display: flex;
     justify-content: center;
-    
+    overflow: hidden;
+    margin-left: 10px;
+}
+
+.c5-img img{
+    width: 100%;
+    height: 550px;
+    object-fit: cover;
 }
 
 .c5-img {
-    width: 43%;
+    width: 90%;
     height: 550px;
-    padding: 10px;
+    margin: 5px;
+    position: relative;
+	display: flex;
+	align-items: center;
+	overflow: hidden;
     object-fit: cover;
 }
+    
+
+    .c5-img::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 4px;
+        background-color: bisque;
+        transition: all .5s;
+        left: -100%;
+        top: 5px;
+    }
+
+    .c5-img:hover:before{
+        left: 1px;
+    }
+
+    .c5-img::after{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 4px;
+        background-color: bisque;
+        transition: all .5s;
+        left: 100%;
+        bottom: 5px;
+    }
+    
+    .c5-img:hover:after{
+        left: 15px;
+    }
+
+.c5-img h2{
+	text-align: center;
+    left: 0;
+    right: 0;
+	position: absolute;
+	line-height: 50px;
+	font-size: 22px;
+	color: #ffc845;
+	font-weight: bold;
+	transition: .5s;
+	transform: scale(1.3);
+	opacity: 0;
+    font-size: 40px;
+    text-shadow: 2px 2px gray;
+    text-transform: uppercase;
+}
+
+.c5-img h2:hover{
+	transform: scale(1);
+	opacity: 1;
+}
+
 
 
 .c5-contenido {
@@ -391,6 +549,47 @@ iframe{
     line-height: 30px;
 }
 
+@media (max-width: 980px){
+    .c5-contenido {
+        margin-right: 0    
+    }
+}
+
+@media (max-width: 775px){
+    .contenedor-5 {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .c5-contenido {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 42px;
+    }
+  
+        .c5-imgs{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            overflow: hidden;
+           padding: 0 20px;
+           margin-left: 0;
+        }    
+}
+
+@media (max-width: 460px){
+    .c5-imgs{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin-left: 0;
+   
+    } 
+
+}
 /*CONTENEDOR 6*/
 
 .contenedor-6 {
@@ -412,6 +611,7 @@ iframe{
 .c6-nosotros h2{
     text-transform: uppercase;
     font-weight: 100;
+    letter-spacing: 4px;
 }
 
 .c6-nosotros span{
@@ -424,7 +624,9 @@ iframe{
 }
 
 .c6-nosotros p{
+    width: 500px;
     text-align: center;
+    line-height: 32px;
 }
 
 .c6-contacto h2{
@@ -442,10 +644,15 @@ iframe{
 .redes h2 {
     text-align: center;
     font-weight: 100;
+    letter-spacing: 4px;
 }
 
 .img-redes {
     margin-top: 12px;
+}
+
+.img-redes a img:hover{
+    transform: scale(1.2);
 }
 
 .mail a{
@@ -453,10 +660,13 @@ iframe{
 }
 
 
+
+
 .mail h2 {
 margin-bottom: 40px;
 text-align: center;
 font-weight: 100;
+letter-spacing: 4px;
 }
 
 .img-redes img{
@@ -468,3 +678,26 @@ font-weight: 100;
     background-color: #a7a6a3;
     color: white;
     margin-top: 40px;}
+
+    .btn1:hover{
+        background-color: #3bcc75;
+    }
+
+    @media (max-width: 787px){
+        .c6-contacto {
+            width: 105%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 50px 0;
+        }   
+        .mail{
+            margin: 20px 0 30px;
+        }
+    }
+
+    @media (max-width: 500px){
+        .c6-nosotros p{
+            width: 380px;
+        }
+    }
